updated makefile, removed old tests, added new standard unit test for keys controller, removed http responses in design code for more concise generated code
