# docs/swagger/swagger.yaml
@@ -133,7 +133,6 @@ paths:
       - application/vnd.goa.error
       - application/vnd.goa.error
       - application/vnd.user+json; type=collection
-      - application/vnd.goa.error
       responses:
         "200":
           description: OK
@@ -143,16 +142,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/error'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/error'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/error'
         "500":
           description: Internal Server Error
+        "504":
+          description: Gateway Timeout
+          schema:
+            $ref: '#/definitions/error'
       schemes:
       - http
       summary: List public SSH Keys based on username (or set of usernames)
